<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">
<!-- 登录界面-->
<LinearLayout
    android:layout_marginBottom="8dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/main_sign_up_back"
        android:layout_marginLeft="10dp"
        android:src="@mipmap/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:alpha="0.6"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:text="@string/main_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
   <TextView
       android:id="@+id/main_sign_up_done"
       android:alpha="0.6"
       android:textColor="#0069c9"
       android:textSize="20sp"
       android:layout_marginRight="10dp"
       android:layout_gravity="center"
       android:text="@string/main_sign_done"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
</LinearLayout>
<ImageView
    android:background="#d4d4d4"
    android:layout_width="match_parent"
    android:layout_height="1dp" />

    <!-- 昵称-->
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/login_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/main_sign_up_patname"
            android:textSize="18sp"
            android:singleLine="true"
            android:alpha="0.6"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:hint="@string/main_sign_patname"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:background="#76cde8"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
<!-- 邮箱-->
<LinearLayout
    android:layout_marginLeft="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/login_email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/main_sign_up_email"
        android:textSize="18sp"
        android:alpha="0.6"
        android:singleLine="true"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:text="@string/main_sign_in_email"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>
<ImageView
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="5dp"
    android:background="#76cde8"
    android:layout_width="match_parent"
    android:layout_height="1dp" />
<!-- 密码-->
<LinearLayout
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@mipmap/login_pwd_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/main_sign_up_pwd"
        android:textSize="18sp"
        android:alpha="0.6"
        android:singleLine="true"
        android:password="true"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        android:hint="@string/main_sign_pwd"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>
<ImageView
    android:layout_marginTop="5dp"
    android:layout_margin="20dp"
    android:background="#76cde8"
    android:layout_width="match_parent"
    android:layout_height="1dp" />



<TextView
    android:textSize="16sp"
    android:alpha="0.6"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:text="@string/main_sign_other"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
<!-- 其他账号登录-->
<LinearLayout
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/main_sign_up_qq"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="#777"
        android:text="@string/main_sign_in_qq"
        android:textSize="16sp"
        android:button="@null"
        android:paddingRight="20dp"
        android:drawableTop="@mipmap/login_qq_login_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <RadioButton
        android:id="@+id/main_sign_up_wechat"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="#777"
        android:text="@string/main_sign_in_wechat"
        android:textSize="16sp"
        android:button="@null"
        android:paddingRight="20dp"
        android:drawableTop="@mipmap/login_wechat_login_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
    <RadioButton
        android:onClick="btn_weibo"
        android:id="@+id/main_sign_up_weibo"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:textColor="#777"
        android:text="@string/main_sign_in_weibo"
        android:textSize="16sp"
        android:button="@null"
        android:paddingRight="20dp"
        android:drawableTop="@mipmap/login_sina_login_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>