<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<!-- 登录界面-->
    <LinearLayout
        android:layout_marginBottom="6dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/main_sign_in_back"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:alpha="0.6"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:text="@string/main_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:background="#d4d4d4"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <!-- 邮箱-->
    <LinearLayout
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/login_email_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:alpha="0.6"
            android:textSize="18sp"
            android:id="@+id/main_sign_in_email"
            android:textColor="#0069c9"
            android:singleLine="true"
             android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/main_sign_in_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="#76cde8"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <!-- 密码-->
    <LinearLayout
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/login_pwd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:alpha="0.6"
            android:textSize="18sp"
            android:id="@+id/main_sign_in_pwd"
            android:singleLine="true"
            android:password="true"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:hint="@string/main_sign_pwd"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="#76cde8"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <TextView
        android:alpha="0.6"
        android:id="@+id/main_sign_in_forget"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="275dp"
        android:text="@string/main_sign_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/main_sign_in_signin"
        android:textSize="15sp"
        android:textColor="#fff"
        android:text="@string/main_sign_in"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#0069c9"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_sign_in_signup"
        android:textSize="15sp"
        android:textColor="#6ec8ea"
        android:text="@string/main_sign_up"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/main_sign_up"
        android:layout_width="280dp"
        android:layout_height="wrap_content" />
    <TextView
        android:alpha="0.6"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:text="@string/main_sign_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
<!-- 其他账号登录-->
   <LinearLayout
       android:layout_marginRight="40dp"
       android:layout_marginLeft="40dp"
       android:paddingLeft="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <RadioButton
       android:id="@+id/main_sign_in_qq"
       android:layout_gravity="center"
       android:gravity="center"
       android:layout_weight="1"
       android:textColor="#777"
       android:text="@string/main_sign_in_qq"
       android:textSize="16sp"
       android:button="@null"
       android:paddingRight="20dp"
       android:drawableTop="@mipmap/login_qq_login_icon"
       android:layout_width="0dp"
       android:layout_height="wrap_content" />
       <RadioButton
           android:id="@+id/main_sign_in_wechat"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_weight="1"
           android:textColor="#777"
           android:text="@string/main_sign_in_wechat"
           android:textSize="16sp"
           android:button="@null"
           android:paddingRight="20dp"
           android:drawableTop="@mipmap/login_wechat_login_icon"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />
       <RadioButton
           android:id="@+id/main_sign_in_weibo"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_weight="1"
           android:textColor="#777"
           android:text="@string/main_sign_in_weibo"
           android:textSize="16sp"
           android:button="@null"
           android:paddingRight="20dp"
           android:drawableTop="@mipmap/login_sina_login_icon"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />
   </LinearLayout>
</LinearLayout>