<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chsj.smallhabit.MoreSettingsActivity">
<LinearLayout
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_marginLeft="10dp"
        android:src="@mipmap/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginRight="30dp"
        android:text="@string/more_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 个人资料-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <ImageView
       android:src="@mipmap/default_avatar_icon"
       android:layout_width="35dp"
       android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 用户反馈-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_feedback"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_clean_cache"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_clean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_help_center"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_tell_partner"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_tell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_check_update"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_about"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_guide"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>




    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 清除缓存-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_sound"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>



    <!-- 分割线-->
    <ImageView
        android:background="#f2f2f2"
        android:layout_width="match_parent"
        android:layout_height="1sp" />
    <!-- 开启推送-->
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/set_push"
            android:layout_width="35dp"
            android:layout_height="35dp" />
        <TextView
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:text="@string/more_settings_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/right_arrow_small_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
